--- a/event-memo/package.json
+++ b/event-memo/package.json
@@ -2,7 +2,7 @@
   "name": "eventlist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lweichern.github.io/eventlist",
+  "homepage": "https://lweichern.github.io/Event-Memo",
   "dependencies": {
     "-": "^0.0.1",
     "@emotion/react": "^11.8.2",
